Trying to fix font size on mobile for recap link

--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,16 @@ button svg:hover {
   padding: 0 1rem;
 }
 
+.recap-link {
+  font-size: 1rem !important;  
+  padding: 0.1rem 0.4rem;
+}
+
 @media (max-width: 768px) {
+  .recap-link {
+    font-size: 1rem !important;
+  }
+
   .smaller-text {
     font-size: 0.9rem;
   }
